--- a/index.html
+++ b/index.html
@@ -11,24 +11,24 @@
     <div class="game">
       <div class="side_a">
         <div class="side_a_choice">
-          <img class="individual_a" id="cage_a" src="images/cage.jpeg" />
+          <button class="individual_a" id="cage_a" src="images/cage.jpeg" ></button>
         </div>
         <div class="side_a_choice">
-          <img class="individual_a" id="fieri_a" src="images/fieri.jpeg" />
+          <button class="individual_a" id="fieri_a" src="images/fieri.jpeg"></button>
         </div>
         <div class="side_a_choice">
-          <img class="individual_a" id="hoff_a" src="images/hoff.jpeg" />
+          <button class="individual_a" id="hoff_a" src="images/hoff.jpeg"></button>
         </div>
       </div>
       <div class="side_b">
         <div class="side_b_choice">
-          <img class="individual_b" id="cage_a" src="images/cage.jpeg" />
+          <button class="individual_b" id="cage_b" src="images/cage.jpeg"></button>
         </div>
         <div class="side_b_choice">
-          <img class="individual_b" id="fieri_a" src="images/fieri.jpeg" />
+          <button class="individual_b" id="fieri_b" src="images/fieri.jpeg"></button>
         </div>
         <div class="side_b_choice">
-          <img class="individual_b" id="hoff_a" src="images/hoff.jpeg" />
+          <button class="individual_b" id="hoff_b" src="images/hoff.jpeg"></button>
         </div>
       </div>
     </div>
